--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "A backend for online harrasment detection using ml and filing report using AI bot",
   "main": "server.js",
   "scripts": {
+    "start": " nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "mongoose": "^8.16.4"
+  }
 }
